--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             Pellen-tesque porttitor cursus massa et vestibulum.</p>
         </li>
       </ul>
-      <p class="peoplemarks__notes">Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae
+      <p class="peoplemarks__notes peoplemarks__notes_visible">Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae
         aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis
         natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
     </div>
