add last changes

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
           <a href="" class="btn btn_lilac navbar__btn_size">Buy Now</a>
         </div>
         <div class="navbar-toogle">
-          <a href="" class="navbar-tooglemenu"><span class="navbar-tooglemenu__lines"></span></a>
-          <ul class="navbar-popupmenu">
+          <a href="" class="navbar-tooglemenu"><span class="navbar-tooglemenu__lines"></span></a>          
+        </div>
+        <ul class="navbar-popupmenu">
             <li class="navbar-popupmenu__item"><a href="#" class="navbar-popupmenu__link">Home</a></li>
             <li class="navbar-popupmenu__item"><a href="#" class="navbar-popupmenu__link">Overview</a></li>
             <li class="navbar-popupmenu__item"><a href="#" class="navbar-popupmenu__link">About Fork</a></li>
             <li class="navbar-popupmenu__item"><a href="#" class="navbar-popupmenu__link">Buying Options</a></li>
             <li class="navbar-popupmenu__item"><a href="#" class="navbar-popupmenu__link">Support</a></li>
-          </ul>
-        </div>
+          </ul>        
       </nav>
     </div>
     <div class="headermain">
@@ -101,7 +101,7 @@
       <div class="features-list">
         <div class="feature-list-item">
           <div class="feature-list-item__icon">
-            <img class="feature-list-item__img" src="" alt="">
+            <img class="feature-list-item__img" src="./img/icon_feature_1.png" alt="">
           </div>
           <div class="feature-list-item__description">
             <h3 class="feature-list-item__title paragraph-header">Created to Make The Web Better</h3>
@@ -112,7 +112,7 @@
         </div>
         <div class="feature-list-item">
           <div class="feature-list-item__icon">
-            <img class="feature-list-item__img" src="" alt="">
+            <img class="feature-list-item__img" src="./img/icon_feature_2.png" alt="">
           </div>
           <div class="feature-list-item__description">
             <h3 class="feature-list-item__title paragraph-header">Incredibly Powerful Tool</h3>
@@ -123,7 +123,7 @@
         </div>
         <div class="feature-list-item">
           <div class="feature-list-item__icon">
-            <img class="feature-list-item__img" src="" alt="">
+            <img class="feature-list-item__img" src="./img/icon_feature_3.png" alt="">
           </div>
           <div class="feature-list-item__description">
             <h3 class="feature-list-item__title paragraph-header">Experimental Stuff</h3>
@@ -134,7 +134,7 @@
         </div>
         <div class="feature-list-item">
           <div class="feature-list-item__icon">
-            <img class="feature-list-item__img" src="" alt="">
+            <img class="feature-list-item__img" src="./img/icon_feature_4.png" alt="">
           </div>
           <div class="feature-list-item__description">
             <h3 class="feature-list-item__title paragraph-header">Created to Make The Web Better</h3>
@@ -143,41 +143,71 @@
               quibusdam quod, reprehenderit sapiente veniam voluptate?</p>
           </div>
         </div>
+        <div class="second-column-img__block">
+          <img class="second-column__img" src="./img/screeneditor.png" alt="">
+        </div>
       </div>
     </div>
   </section>
+
   <!--CAROUSEL-->
   <section class="section-carousel">
     <div class="container">
       <div class="carousel">
-        <div class="carousel-list">
-          <div class="carousel-list-item">
-            <div class="carousel-list-item__author">
-              <div class="carousel-list-item__img"></div>
-              <p class="carousel-list-item__name">Steven Strange</p>
-              <p class="carousel-list-item__nick">@DoctorS</p>
+
+        <div class="carousel-wrapper">
+          <div class="carousel-button-left"><a class="carousel-button__link_left" href="#"></a></div>
+
+          <div class="carousel-list">
+
+            <div class="carousel-list-item">
+              <div class="carousel-list-item__author">
+                <div class="carousel-list-item__img"><img src="./img/img2_carousel.jpg" alt=""></div>
+                <p class="carousel-list-item__name">Steven Strange</p>
+                <p class="carousel-list-item__nick">@DoctorS</p>
+              </div>
+              <p class="carousel-list-item__text"><span class="caroules-list-item__text_light">@Pixelbuddha</span>Suspendisse
+                sodales sem est, in scelerisque felis. Suspendisse sodales sem est, in scelerisque felis. Suspendisse
+                sodales sem est, in scelerisque felis.</p>
+              <p class="carousel-list-item__time">2 hours ago</p>
             </div>
-            <p class="carousel-list-item__text"><span class="caroules-list-item__text_light">@Pixelbuddha</span>Suspendisse
-              sodales sem est, in scelerisque felis. Suspendisse sodales sem est, in scelerisque felis. Suspendisse
-              sodales sem est, in scelerisque felis.</p>
-            <p class="carousel-list-item__time">2 hours ago</p>
+
+            <div class="carousel-list-item">
+              <div class="carousel-list-item__author">
+                <div class="carousel-list-item__img"><img src="./img/img1_carousel.jpg" alt=""></div>
+                <p class="carousel-list-item__name">Mister Evidence</p>
+                <p class="carousel-list-item__nick">@Vice</p>
+              </div>
+              <p class="carousel-list-item__text"><span class="caroules-list-item__text_light">@Pixelbuddha</span>Suspendisse
+                sodales sem est, in scelerisque felis. Suspendisse sodales sem est, in scelerisque felis. Suspendisse
+                sodales sem est, in scelerisque felis.</p>
+              <p class="carousel-list-item__time">24 hours ago</p>
+            </div>
+
           </div>
+
+          <div class="carousel-button-right"><a class="carousel-button__link_right" href="#"></a></div>
+
         </div>
-        <div class="social-links">
-          <div class="social-links-item">
-            <a href="" class="social-btn social-btn_github">GitHub</a>
-            <p class="social-item__followers">7 352 Followers</p>
-          </div>
-          <div class="social-links-item">
-            <a href="" class="social-btn social-btn_twitter">Twitter</a>
-            <p class="social-item__followers">7 352 Followers</p>
-          </div>
-          <div class="social-links-item">
-            <a href="" class="social-btn social-btn_facebook">Facebook</a>
-            <p class="social-item__followers">7 352 Followers</p>
-          </div>
+
+      </div>
+
+      <div class="social-links">
+        <div class="social-links-item">
+          <a href="" class="social-btn social-btn_github">GitHub</a>
+          <p class="social-item__followers">7 352 Followers</p>
+        </div>
+        <div class="social-links-item">
+          <a href="" class="social-btn social-btn_twitter">Twitter</a>
+          <p class="social-item__followers">7 352 Followers</p>
+        </div>
+        <div class="social-links-item">
+          <a href="" class="social-btn social-btn_facebook">Facebook</a>
+          <p class="social-item__followers">7 352 Followers</p>
         </div>
       </div>
+
+
     </div>
   </section>
   <section class="peoplemarks">
@@ -189,51 +219,60 @@
         <li class="peoplemarks-item">
           <a href="#" class="peoplemarks-item__link">
             <img src="./img/logo_smashing.png" alt="logo smashing" class="peoplemarks-item__img"></a>
-          <p class="peoplemarks-item__text peoplemarks-item__text_size">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin
+          <p class="peoplemarks-item__text peoplemarks-item__text_size">Sed vestibulum scelerisque urna, eu finibus leo
+            facilisis sit amet. Proin
             id dignissim magna. Sad varius urna et pulvinar venenatis.</p>
         </li>
         <li class="peoplemarks-item">
           <a href="#" class="peoplemarks-item__link">
             <img src="./img/logo_codrops.png" alt="logo codrops" class="peoplemarks-item__img"></a>
-          <p class="peoplemarks-item__text peoplemarks-item__text_size">Donec euismod dolor ut ultricies con-sequat. Vivamus urna ipsum, rhoncus
+          <p class="peoplemarks-item__text peoplemarks-item__text_size">Donec euismod dolor ut ultricies con-sequat.
+            Vivamus urna ipsum, rhoncus
             molestie neque ac, mollis eleifend nibh.</p>
         </li>
         <li class="peoplemarks-item">
           <a href="#" class="peoplemarks-item__link">
             <img src="./img/logo_wfirm.png" alt="logo w-firm" class="peoplemarks-item__img"></a>
-          <p class="peoplemarks-item__text peoplemarks-item__text_size">In efficitur in velit et tempus. Duis nec odio dapibus, suscript erat
+          <p class="peoplemarks-item__text peoplemarks-item__text_size">In efficitur in velit et tempus. Duis nec odio
+            dapibus, suscript erat
             fringilla, imperdiet nibh. Morbi tempus auctor felis ac vehicula.</p>
         </li>
         <li class="peoplemarks-item">
           <a href="#" class="peoplemarks-item__link">
             <img src="./img/logo_pixel_buddha.png" alt="logo buddha" class="peoplemarks-item__img"></a>
-          <p class="peoplemarks-item__text peoplemarks-item__text_size">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin
+          <p class="peoplemarks-item__text peoplemarks-item__text_size">Sed vestibulum scelerisque urna, eu finibus leo
+            facilisis sit amet. Proin
             id dignissim magna. Sad varius urna et pulvinar venenatis.</p>
         </li>
         <li class="peoplemarks-item">
           <a href="#" class="peoplemarks-item__link">
             <img src="./img/logo_creative_bloq.png" alt="logo create bloq" class="peoplemarks-item__img"></a>
-          <p class="peoplemarks-item__text peoplemarks-item__text_size">Praesent ut eros tristique, malesuada lectus vel, lobortis massa. Nulla
+          <p class="peoplemarks-item__text peoplemarks-item__text_size">Praesent ut eros tristique, malesuada lectus
+            vel, lobortis massa. Nulla
             faucibus lorem id arcu con-sequat faucibus.</p>
         </li>
         <li class="peoplemarks-item">
           <a href="#" class="peoplemarks-item__link">
             <img src="./img/logo_tnw.png" alt="logo tnw" class="peoplemarks-item__img"></a>
-          <p class="peoplemarks-item__text peoplemarks-item__text_size">Fusce pharetra erat id odio blandit, nec pharetra eros venenatis.
+          <p class="peoplemarks-item__text peoplemarks-item__text_size">Fusce pharetra erat id odio blandit, nec
+            pharetra eros venenatis.
             Pellen-tesque porttitor cursus massa et vestibulum.</p>
         </li>
       </ul>
-      <p class="peoplemarks__notes peoplemarks__notes_visible">Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae
+      <p class="peoplemarks__notes peoplemarks__notes_visible">Duis lobortis arcu sed arcu tincidunt feugiat. Nulla
+        nisi mauris, facilisis vitae
         aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis
         natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+      <hr class="horline horline_size">
     </div>
   </section>
   <section class="subscription-price">
     <div class="container text-center subscrprice-content">
       <div class="priceheader">
-        <h2 class="priceheader__title">Fork Subscription Pricing</h2>
+        <h2 class="priceheader__title priceheader__title_layout">Fork Subscription Pricing</h2>
       </div>
       <ul class="pricetable">
+        <div class="pricetable-row">
         <li class="pricetable-item">
           <h3 class="pricetable-item__title">Students</h3>
           <div class="pricetable-item__price">29</div>
@@ -250,13 +289,15 @@
           <p class="pricetable-item__info">Email Support</p>
           <a href="" class="pricetable-item__btnbuy">purchase</a>
         </li>
-        <li class="pricetable-item">
-          <h3 class="pricetable-item__title">agency</h3>
-          <div class="pricetable-item__price">99</div>
-          <p class="pricetable-item__period">per month</p>
+      </div>
+      <div class="pricetable-row">
+        <li class="pricetable-item pricetable-item_selected">
+          <h3 class="pricetable-item__title pricetable-item__title_selected">agency</h3>
+          <div class="pricetable-item__price pricetable-item__price_selected">99</div>
+          <p class="pricetable-item__period pricetable-item__period_selected">per month</p>
           <p class="pricetable-item__info">1-12 Team Members</p>
           <p class="pricetable-item__info">Phone Support</p>
-          <a href="" class="pricetable-item__btnbuy">purchase</a>
+          <a href="" class="pricetable-item__btnbuy pricetable-item__btnbuy_selected">purchase</a>
         </li>
         <li class="pricetable-item">
           <h3 class="pricetable-item__title">enterprise</h3>
@@ -266,6 +307,7 @@
           <p class="pricetable-item__info">24/7 Phone Support</p>
           <a href="" class="pricetable-item__btnbuy">purchase</a>
         </li>
+      </div>
       </ul>
     </div>
   </section>
@@ -275,9 +317,13 @@
       <div class="subscribe">
         <h2 class="subscribe__title">Subscribe To Stay In Touch</h2>
         <form action="" class="subscribe-form">
-          <input class="subscribe-form__input" type="text" placeholder="Your name">
+          <input class="subscribe-form__input subscribe-form__input_name" type="text" placeholder="Your name">
           <input class="subscribe-form__input" type="text" placeholder="Phone">
         </form>
+        <div class="subscribeinfo-btn-block">
+          <a href="" class="btn__subscribe">SUBSCRIBE</a>
+        </div>
+
       </div>
     </div>
   </section>
@@ -291,24 +337,23 @@
             <a href="#" class="logo-link__image logo-link__image_footer"></a>
             <h2 class="logo-link__title logo-link__title_light"><span class="logo-link__title logo-link__title_dark">FORK</span>IO</h2>
           </a>
-          <p class="paragraph-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A atque cum debitis
-            delectus deleniti dolor dolorum earum eos esse expedita fugit illo magni omnis quibusdam quod,
-            reprehenderit sapiente veniam voluptate?</p>
+          <p class="logo__paragraph paragraph-text">Lorem ipsum dolor sit amet, feugiat delicat liberavisse id cum no
+            quo</p>
         </div>
         <div class="footer-nav">
           <h3 class="footer-nav__header paragraph-header">Navigation</h3>
           <ul class="footer-nav-list">
-            <li class="footer-nav-list__item"><a href="" class="footer-nav-list__item">Home</a></li>
-            <li class="footer-nav-list__item"><a href="" class="footer-nav-list__item">Overview</a></li>
-            <li class="footer-nav-list__item"><a href="" class="footer-nav-list__item">About</a></li>
-            <li class="footer-nav-list__item"><a href="" class="footer-nav-list__item">Buying Options</a></li>
-            <li class="footer-nav-list__item"><a href="" class="footer-nav-list__item">Support</a></li>
+            <li class="footer-nav-list__item"><a href="" class="footer-nav-list__link">Home</a></li>
+            <li class="footer-nav-list__item"><a href="" class="footer-nav-list__link">Overview</a></li>
+            <li class="footer-nav-list__item"><a href="" class="footer-nav-list__link">About</a></li>
+            <li class="footer-nav-list__item"><a href="" class="footer-nav-list__link">Buying Options</a></li>
+            <li class="footer-nav-list__item"><a href="" class="footer-nav-list__link">Support</a></li>
           </ul>
         </div>
         <div class="footer-contacts">
           <div class="phone-contact">
             <h2 class="phone-contact__number">347 567 78 90</h2>
-            <p class="phone-contact__open-time">AVAILABLE FROM 12 PM - 18 PM</p>
+            <p class="phone-contact__open-hours paragraph-text">AVAILABLE FROM 12 PM - 18 PM</p>
           </div>
           <div class="address-contact">
             <h3 class="address-contact__city paragraph-header">New York, NY</h3>
@@ -318,7 +363,8 @@
         </div>
         <div class="footer-info">
           <h3 class="footer-info__title paragraph-header">Info</h3>
-          <p class="paragraph-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A atque cum debitis
+          <p class="footer-info__paragraph paragraph-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A
+            atque cum debitis
             delectus deleniti dolor dolorum earum eos esse expedita fugit illo magni omnis quibusdam quod,
             reprehenderit sapiente veniam voluptate?</p>
         </div>
